--- a/sam_lmer_apuntes.Rmd
+++ b/sam_lmer_apuntes.Rmd
@@ -911,4 +911,357 @@ fuente1            -1.3547     0.4486 65.0000  -3.020  0.00361 **
 el eerror es menor porque antes con el vif el 2.76 inflaba el error
 
 
- 
+QUITAMOS LA QUE MAS VIF TIENE PRIMERA
+
+COSAS DEL VIF
+
+NI DECOÑA CUANDO ES 10
+MAS DE 6 MALO MALO
+SI VALE MAS DE 4 SE PONE NERVIOSISIMO
+
+Pero si mi N es de 30 y tengo solo 4 predictoras ahi ya,,, dudo porque quizas paso de sig a no sig.
+
+
+4 puntos clave resumen
+
+RES - HOMOCEDAST, NORMALIDAD, OUTLIERS
+PRED- MULTICOLINEALIDAD
+
+           R2m       R2c
+[1,] 0.4747659 0.5931434
+> r.squaredGLMM(mmm)
+           R2m       R2c
+[1,] 0.3003224 0.3669555
+
+el modelo mmm baja muhco r2c pasamos de explicar un 60% al 37%.
+
+VAMOS a HACER OMNIBUS TEST por teoria de la informacion o frecuentista. 
+
+Compararemos nuestro modelo con un modelo nulo.
+
+escribo en consola modelo y veo que es REML y necesito ML lo modifico con update
+
+> mml <-update(modelo, REML = F)
+
+> AICc(mml,modelonulo_ml)
+              df     AICc
+mml           29 632.7468
+modelonulo_ml  3 638.2099
+
+> AICc(mml,modelonulo_ml)
+              df     AICc
+mml           29 632.7468
+modelonulo_ml  3 638.2099
+> weights(AICc(mml,modelonulo_ml))
+NULL
+> Weights(AICc(mml,modelonulo_ml))
+ model weights 
+[1] 0.939 0.061
+> 0.939/0.061
+[1] 15.39344
+
+El modelo con predictores es 15 veces mas parsimonioso que el otro. La funcion weights::MuMin
+
+> r.squaredGLMM(mml)
+           R2m       R2c
+[1,] 0.5628979 0.5919574
+> r.squaredGLMM(modelonulo_ml)
+     R2m       R2c
+[1,]   0 0.1853959
+
+
+r2m variabilida explicada por las fijas
+r2c variabilidad explicada por todas aleatorias y fijas
+
+Hay un 18.53% debido a los individuos , que se comparte con ellos porque son especies, no todo individuo esta en todas las especies pero las especies son individuos. 
+
+Ahora vamos a hacer MLRT
+
+
+
+> lrtest(modelonulo_ml,mml)
+Likelihood ratio test
+
+Model 1: a_por_b ~ (1 | id)
+Model 2: a_por_b ~ t_sonda + fuente * especie + (1 | id)
+  #Df  LogLik Df  Chisq Pr(>Chisq)    
+1   3 -315.99                         
+2  29 -275.62 26 80.737  1.613e-07 ***
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+El modelo con predictores explica significativamente más informacion
+
+1.613e-07 *** me dice que es muy poco probable que al informacion que he explicado con lso predictores sea obtenida por azar. 
+
+
+
+PBmodcomp(modelo.ML, modelo.nulo.ML, nsim=1000, seed=123, details=0)  ## muy lento!!!
+
+
+comparo el modelo con ML con el nulo con ML, hacemos bootrapping de las 104 unos entran y otros si y corro modelo y modelo nulo, calculo la diferencia de devianzas entre modelo nulo y el de interes con ML y lo hago mil veces y esto quita importancia a puntos raros outliers. Esta estima es mas honestas de la sifgnificacion global del modelo. Da una p de PBtest 80.737     0.000999 ***
+
+> 1/0.000999
+[1] 1001.001
+
+da 1000 la p no tiene potencia tendria que haberle dado mas simulaciones???
+
+Si tenemos un modelo que tenemos puntos influyentes perdidos en vez de hacer el LRT de omnibus test podemos hacer este de bootstrapping.
+
+Este mismo se peude hace para compara los dos modelso que queramos
+
+> PBmodcomp(update(lmer.1,REML=F), update(lmer.2,REML=F), nsim=1000, seed=123, details=0)  ## muy lento!!!
+
+ESTO SIRVE PARA MODELOS ANIDADOS Y QUE TENGA LA MISMA VARIABLE RESPUESTA VARIANDO PARTE FIJA O PARTE ALEATORIA
+
+OMNIBUS TEST LO USAMOSA PARA PUNTOS RAROS
+
+summary modelo en los lmer una cosa que aportan muy buenas son los grados de libertad.
+
+#### SIGNIFICACION DE EFECTOS DEL MODELO ####
+## nos fijamos en los coeficientes de los efectos fijos 
+##  para modelos lmer con aproximacion "Satterthwaite" (por defecto) y "Kenward-Roger"
+round(summary(modelo, ddf="Kenward-Roger")$coefficients, 5)
+
+La aprox de Kenward es la mas aceptada actualmente para grados de libertad. LA clasica era Shaterway
+Kenward roger es la mas exigente y la que menos falsos positivos da
+
+
+> PBmodcomp(update(lmer.1,REML=F), update(lmer.2,REML=F), nsim=1000, seed=123, details=0)  ## muy lento!!!
+boundary (singular) fit: see help('isSingular')
+Hubo 36 avisos (use warnings() para verlos)
+> r.squaredGLMM(lmer.1)
+           R2m       R2c
+[1,] 0.4747659 0.5931434
+> r.squaredGLMM(lmer.2)
+           R2m       R2c
+[1,] 0.5045873 0.6495975
+
+por eso el script lento da 1 son indistinguibles estadisticamente ergo quedate con el mas sencillo lmer.1
+
+> formula(lmer.2)
+a_por_b ~ t_sonda + fuente * especie + (1 + t_sonda + fuente | 
+    id)
+> formula(lmer.1)
+a_por_b ~ t_sonda + fuente * especie + (1 | id)
+
+
+> round(summary(modelo, ddf="Kenward-Roger")$coefficients, 5)
+                  Estimate Std. Error       df  t value Pr(>|t|)
+(Intercept)        2.70542    6.94902 76.23902  0.38932  0.69812
+t_sonda            1.33247    0.22016 76.01150  6.05241  0.00000
+fuente1           -4.28874    0.60292 72.93542 -7.11331  0.00000
+especie1           3.67175    1.83089 12.86388  2.00544  0.06642
+especie2           5.24929    1.82910 12.82158  2.86987  0.01330
+especie3           1.01506    1.83208 12.89195  0.55405  0.58903
+especie4           3.82002    1.82675 12.76615  2.09115  0.05710
+especie5          -1.40421    1.83397 12.93666 -0.76567  0.45762
+especie6          -2.26112    1.83153 12.87891 -1.23455  0.23905
+especie7          -0.94501    1.82704 12.77287 -0.51724  0.61383
+especie8           1.60315    1.82826 12.80165  0.87687  0.39671
+especie9          -1.86110    1.82699 12.77173 -1.01867  0.32727
+especie10         -3.08439    1.82676 12.76638 -1.68845  0.11559
+especie11          0.15078    1.83036 12.85116  0.08238  0.93561
+especie12         -3.97496    1.82772 12.78895 -2.17482  0.04902
+fuente1:especie1  -0.56590    1.24969 64.20862 -0.45283  0.65220
+fuente1:especie2  -0.38492    1.26112 64.48364 -0.30522  0.76118
+fuente1:especie3  -0.66363    1.28418 65.01360 -0.51677  0.60707
+fuente1:especie4  -0.17734    1.24691 64.14043 -0.14222  0.88735
+fuente1:especie5  -1.14855    1.24518 64.09777 -0.92240  0.35978
+fuente1:especie6  -0.53108    1.24498 64.09286 -0.42658  0.67112
+fuente1:especie7   1.01465    1.26971 64.68484  0.79911  0.42715
+fuente1:especie8   2.43459    1.24342 64.05424  1.95797  0.05459
+fuente1:especie9   0.40226    1.24479 64.08809  0.32316  0.74763
+fuente1:especie10 -0.88945    1.24204 64.01971 -0.71612  0.47652
+fuente1:especie11 -0.76089    1.24284 64.03968 -0.61222  0.54256
+fuente1:especie12  0.05023    1.24392 64.06649  0.04038  0.96791
+> round(summary(modelo)$coefficients, 5)
+                  Estimate Std. Error       df  t value Pr(>|t|)
+(Intercept)        2.70542    6.81099 76.23756  0.39721  0.69232
+t_sonda            1.33247    0.21576 76.00961  6.17579  0.00000
+fuente1           -4.28874    0.59516 72.92796 -7.20604  0.00000
+especie1           3.67175    1.83073 12.84315  2.00562  0.06644
+especie2           5.24929    1.82901 12.80091  2.87002  0.01332
+especie3           1.01506    1.83187 12.87119  0.55411  0.58900
+especie4           3.82002    1.82675 12.74555  2.09115  0.05713
+especie5          -1.40421    1.83368 12.91585 -0.76579  0.45757
+especie6          -2.26112    1.83134 12.85817 -1.23468  0.23904
+especie7          -0.94501    1.82702 12.75227 -0.51724  0.61384
+especie8           1.60315    1.82820 12.78100  0.87690  0.39672
+especie9          -1.86110    1.82698 12.75113 -1.01868  0.32729
+especie10         -3.08439    1.82676 12.74579 -1.68845  0.11562
+especie11          0.15078    1.83021 12.83046  0.08239  0.93561
+especie12         -3.97496    1.82768 12.76833 -2.17487  0.04905
+fuente1:especie1  -0.56590    1.24938 64.18796 -0.45294  0.65212
+fuente1:especie2  -0.38492    1.26037 64.46334 -0.30540  0.76104
+fuente1:especie3  -0.66363    1.28253 64.99400 -0.51743  0.60661
+fuente1:especie4  -0.17734    1.24671 64.11969 -0.14225  0.88733
+fuente1:especie5  -1.14855    1.24505 64.07697 -0.92250  0.35973
+fuente1:especie6  -0.53108    1.24486 64.07205 -0.42662  0.67109
+fuente1:especie7   1.01465    1.26862 64.66480  0.79980  0.42675
+fuente1:especie8   2.43459    1.24336 64.03339  1.95807  0.05458
+fuente1:especie9   0.40226    1.24467 64.06728  0.32319  0.74761
+fuente1:especie10 -0.88945    1.24203 63.99881 -0.71613  0.47652
+fuente1:especie11 -0.76089    1.24280 64.01881 -0.61224  0.54255
+fuente1:especie12  0.05023    1.24384 64.04565  0.04038  0.96791
+
+cambian un poco los errores KR lo hace mas conservador. CREO QUE KR SOLO PARA GAUSSIANOS
+
+variables predictoras en distintas escalas de magnitud y queremos comparar estos predictores debemos escalarlas a media 0 desv 1 y asi podemos comparar coeficientes asi que a mayor valor absoluto de coef es mayor su efecto. 
+
+> scale((datos$t_sonda))
+               [,1]
+  [1,] -2.046077673
+  [2,]  0.312289246
+  [3,]  1.424090793
+  [4,] -0.092002226
+  [5,] -1.136421862
+  [6,] -1.709168113
+  [7,]  0.885035498
+  [8,]  0.851344542
+  [9,] -1.945004805
+ [10,] -0.967967082
+ [11,]  1.390399837
+ [12,]  0.278598290
+ [13,] -0.833203258
+ [14,] -1.136421862
+ [15,]  1.019799322
+ [16,]  1.053490278
+ [17,] -2.012386717
+ [18,] -1.304876641
+ [19,]  1.424090793
+ [20,]  0.783962630
+ [21,] -0.967967082
+ [22,] -1.540713333
+ [23,]  1.255636013
+ [24,]  0.649198806
+ [25,]  0.649198806
+ [26,] -1.405949509
+ [27,]  1.221945058
+ [28,]  0.851344542
+ [29,] -1.203803774
+ [30,] -1.641786201
+ [31,]  0.986108366
+ [32,]  0.649198806
+ [33,] -0.361529874
+ [34,] -0.294147962
+ [35,]  0.851344542
+ [36,]  1.390399837
+ [37,] -0.428911786
+ [38,] -0.327838918
+ [39,]  0.952417410
+ [40,]  0.211216378
+ [41,] -0.428911786
+ [42,]  0.211216378
+ [43,]  1.457781749
+ [44,]  1.390399837
+ [45,] -0.361529874
+ [46,] -1.035348994
+ [47,] -0.159384138
+ [48,]  0.548125938
+ [49,] -0.125693182
+ [50,] -0.058311270
+ [51,]  1.053490278
+ [52,]  0.918726454
+ [53,] -0.092002226
+ [54,] -0.866894214
+ [55,]  0.244907334
+ [56,] -0.664748478
+ [57,]  1.053490278
+ [58,] -1.473331421
+ [59,]  1.289326969
+ [60,]  0.817653586
+ [61,] -1.035348994
+ [62,] -1.439640465
+ [63,]  0.783962630
+ [64,]  0.918726454
+ [65,] -0.327838918
+ [66,] -0.226766050
+ [67,]  0.851344542
+ [68,]  0.918726454
+ [69,] -0.462602742
+ [70,] -1.237494729
+ [71,]  0.009070642
+ [72,]  0.851344542
+ [73,]  0.345980202
+ [74,] -1.675477157
+ [75,]  1.255636013
+ [76,]  1.019799322
+ [77,] -0.193075094
+ [78,] -1.372258553
+ [79,]  0.177525422
+ [80,]  0.312289246
+ [81,] -2.079768629
+ [82,]  0.042761598
+ [83,]  1.390399837
+ [84,]  1.053490278
+ [85,] -0.529984654
+ [86,] -0.799512302
+ [87,]  0.110143510
+ [88,] -0.597366566
+ [89,]  0.682889762
+ [90,] -1.709168113
+ [91,]  1.221945058
+ [92,]  0.581816894
+ [93,] -0.765821346
+ [94,] -1.102730906
+ [95,] -0.159384138
+ [96,]  0.514434982
+ [97,] -0.327838918
+ [98,] -0.260457006
+ [99,]  1.356708881
+[100,]  1.592545573
+[101,] -0.092002226
+[102,] -0.529984654
+[103,] -0.024620314
+[104,] -0.496293698
+attr(,"scaled:center")
+[1] 31.47308
+attr(,"scaled:scale")
+[1] 2.968156
+> mean(scale((datos$t_sonda)))
+[1] -2.77316e-16
+> round(mean(scale((datos$t_sonda))),10)
+[1] 0
+> round(sd(scale((datos$t_sonda))),10)
+[1] 1
+> plot(scale((datos$t_sonda)),)
+> plot(scale((datos$t_sonda)),datos$t_sonda)
+
+FORMA DE ESTANDARIZA A MEAN 0 SD1
+
+Esto es lo que hace standardise_parameters(modelo)
+
+plot(standardize_parameters(modelo))
+
+vemos lo que hablabamos del valor absoluto del efecto de los predictores en valor absoluto
+
+
+plot(standardize_parameters(modelo)) SI LA LINEA DEL INTERVALO INCLUYE EL 0 NO ES SIGNIFICATIVO
+
+los paramretros standarizados puedo saber quien explica mas no cuanto explica pero si su peso de los coeficientes 
+
+TABLA ANOVA
+
+Donde especie no va a tener un efecto si no todas juntas 
+
+OJO anova con minuscula jamas la vamos utilizar para extraer un modelo factorial de GLM, se hace con Anova
+
+> anova(modelo, ddf="Kenward-Roger", type=3)
+esto lo que hace es evaluar o analizar la significacion de los predictores
+
+Anova(modelo, type=3, test="F") con KR
+
+Vamos a ver ahora la tabla anova de los efectos random
+
+> rand(modelo)
+ANOVA-like table for random-effects: Single term deletions
+
+Model:
+a_por_b ~ t_sonda + fuente + especie + (1 | id) + fuente:especie
+         npar  logLik    AIC    LRT Df Pr(>Chisq)  
+<none>     29 -249.09 556.17                       
+(1 | id)   28 -250.92 557.85 3.6745  1    0.05525 .
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
